# ghostpost_backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
ghostpost/: admin.py  models.py  serializers.py  views.py
ghostpost/migrations/: 0001_initial.py
ghostpost_backend/: settings.py  urls.py
